# python-performance

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .mypy.ini  .travis.yml  CMakeLists.txt  CMakePresets.json  Hypot.f90  LICENSE  LICENSE.txt  Matmul.py  NoneVsNan.py  NothingVsNan.jl  Pisum.py  README.md  README.rst  RunHypot.py  RunIter.py  RunMatmul.py  RunNoneVsNan.py  RunPisum.py  WindowsStderr.py  bench_hypot.py  benchmark.f90  benchmark.py  benchmark.sh  benchmark_hypot.f90  benchmark_iter.f90  benchmark_iter.m  benchmark_matmul.f90  benchmark_matmul.m  benchmark_matmul.pro  benchmark_matmul.py  benchmarks.f90  carriage_return.py  checkversions.py  dis_div.c  dis_mult.c  (+29 more)
.github/workflows/: ci.yml
NASA_JulesKouatchou/: README
NASA_JulesKouatchou/Problem1/: DoCopyMatrix.scala  copyMatrix.R  copyMatrix.c  copyMatrix.f90  copyMatrix.jl  copyMatrix.m  copyMatrix.py
NASA_JulesKouatchou/Problem2/: DoMultiplyMatrices.scala  DoMultiplyMatrices_jama.scala  DoMultiplyMatrices_la4j.scala  matMult.R  matMult.jl  matMult.m  matMult.py  matMult_DGEMM.f90  matMult_loops.c  matMult_loops.f90  matMult_matmul.f90
NASA_JulesKouatchou/Problem3/: DoJacoby4.scala  laplaceJacobi4.R  laplaceJacobi4.c  laplaceJacobi4.jl  laplaceJacobi4.py  laplaceJacobi4_loops.f90  laplaceJacobi4_loops.m  laplaceJacobi4_vect.f90  laplaceJacobi4_vect.m
NASA_JulesKouatchou/Problem4/: 72-layer.p  calcPressureLevels.m  getData_from_file.m  get_levels.m  timeSeries_AOA.R  timeSeries_AOA.jl  timeSeries_AOA.m  timeSeries_AOA.pro  timeSeries_AOA.py  timeSeries_AOA_multicore.m  timeSeries_AOA_multiproc.R  timeSeries_AOA_multiproc.py  timeSeries_AOA_multiprocessing.jl
archive/: .appveyor.yml  .travis.yml
cmake/: compiler.cmake  mkl_lapack95.cmake
cmake/Modules/: FindCAF.cmake  FindLAPACK.cmake  FindMKL.cmake
fft/: check_ram.m  fft_bench.m  fft_bench.py  perf.py  ram_avail.m
hypot/: Hypot.py  hypot.f90
iter/: CMakeLists.txt  iter.f90  iter.jl
mandelbrot/: CMakeLists.txt  mandel.f90
matmul/: CMakeLists.txt  intel_dgemm.f90  intel_gemm.f90  matmul.f90  matmul.ipy  matmul.jl  matmul.m  matmul.pro  matmul.py  matmul_cuda.py  matmul_drv.f90  matmul_pycuda.py  matmul_sub.f90  meson.build
nonenan/: NoneVsNan.py  NothingVsNan.jl
pisum/: CMakeLists.txt  cpisum.pyx  isoctave.m  iter.f90  iter.jl  iter.m  iter.pro  iter_drv.f90  iter_sub.f90  meson.build  pisum.c  pisum.f90  pisum.ipy  pisum.jl  pisum.m  pisum.pro  pisum.py  pisum_cython.py  pisum_numba.py
power/: power.ipy  power.jl  power_test.go
python_performance/: __init__.py
python_performance/tests/: test_all.py
pythonperformance/: __init__.py
src/python_performance/: CMakeLists.txt  __init__.py  hypot.py  isoctave.m  kind.f90  matmul.py  perf.f90  pisum.py
src/python_performance/cmake/: compiler.cmake
src/python_performance/hypot/: CMakeLists.txt  hypot.f90
src/python_performance/iter/: CMakeLists.txt  iter.f90  iter.m
src/python_performance/mandelbrot/: mandel.m
src/python_performance/matmul/: CMakeLists.txt  intel_dgemm.f90  intel_gemm.f90  matmul.f90  matmul.m  matmul.pro  meson.build
src/python_performance/pisum/: CMakeLists.txt  meson.build  pisum.m  pisum.py  pisum_cython.py  pisum_numba.py
tests/: test_all.py
