[metadata]
name = python-performance
version = 0.2.1
author = Michael Hirsch, Ph.D.
description = Python, C, Fortran, Matlab, GNU Octave, IDL, GDL, Julia, CUDA benchmarks
url = https://github.com/scivision/python-performance
keywords =
  benchmarks
  benchmarking
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Software Development
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 2.7
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  cython
  pathlib2

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
jit =
  numba
io = 
  xarray
  netcdf4

[options.entry_points]
console_scripts =
  RunHypot = RunHypot:main
  RunMatmul = RunMatmul:main
  RunNoneVsNan = RunNoneVsNan:main
  RunPisum = RunPisum:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,NASA_JulesKouatchou/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */NASA_JulesKouatchou/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
