[metadata]
name = python-performance
version = 0.2.3
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Python, C, Fortran, Matlab, GNU Octave, IDL, GDL, Julia, CUDA benchmarks
url = https://github.com/scivision/python-performance
keywords =
  benchmarks
  benchmarking
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: C
  Programming Language :: Cython
  Programming Language :: Fortran
  Programming Language :: Other
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development
license_files =
	LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy

[options.extras_require]
tests =
  pytest
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
jit =
  numba
  cython >= 0.27
io =
  xarray
  netcdf4

[options.entry_points]
console_scripts =
  RunHypot = RunHypot:main
  Matmul = Matmul:main
  RunNoneVsNan = RunNoneVsNan:main
  Pisum = Pisum:main
